// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NetworkRequestsSummaryCard > does not show Report column when single valid stat 1`] = `
<div
  class="rounded-xl border bg-card text-card-foreground shadow"
>
  <div
    class="p-6 flex flex-row items-center justify-between space-y-0"
  >
    <div
      class="font-semibold leading-none tracking-tight"
    >
      Network Requests Summary
    </div>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
      data-state="closed"
      id="radix-_r_2_"
      title="Copy table"
      type="button"
    >
      <svg
        class="lucide lucide-copy h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          ry="2"
          width="14"
          x="8"
          y="8"
        />
        <path
          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
        />
      </svg>
      <span
        class="sr-only"
      >
        Copy table
      </span>
    </button>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div>
      <div
        class="relative w-full overflow-auto"
      >
        <table
          class="w-full caption-bottom text-sm table-fixed"
        >
          <thead
            class="[&_tr]:border-b"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Total Requests
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Transfer Size
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Resource Size
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                5
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  100 bytes
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  200 bytes
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`NetworkRequestsSummaryCard > filters out stats with zero totalRequests 1`] = `
<div
  class="rounded-xl border bg-card text-card-foreground shadow"
>
  <div
    class="p-6 flex flex-row items-center justify-between space-y-0"
  >
    <div
      class="font-semibold leading-none tracking-tight"
    >
      Network Requests Summary
    </div>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
      data-state="closed"
      id="radix-_r_6_"
      title="Copy table"
      type="button"
    >
      <svg
        class="lucide lucide-copy h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          ry="2"
          width="14"
          x="8"
          y="8"
        />
        <path
          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
        />
      </svg>
      <span
        class="sr-only"
      >
        Copy table
      </span>
    </button>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div>
      <div
        class="relative w-full overflow-auto"
      >
        <table
          class="w-full caption-bottom text-sm table-fixed"
        >
          <thead
            class="[&_tr]:border-b"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Total Requests
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Transfer Size
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Resource Size
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                3
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  500 bytes
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  600 bytes
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`NetworkRequestsSummaryCard > renders card with title and table when stats have requests 1`] = `
<div
  class="rounded-xl border bg-card text-card-foreground shadow"
>
  <div
    class="p-6 flex flex-row items-center justify-between space-y-0"
  >
    <div
      class="font-semibold leading-none tracking-tight"
    >
      Network Requests Summary
    </div>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
      data-state="closed"
      id="radix-_r_0_"
      title="Copy table"
      type="button"
    >
      <svg
        class="lucide lucide-copy h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          ry="2"
          width="14"
          x="8"
          y="8"
        />
        <path
          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
        />
      </svg>
      <span
        class="sr-only"
      >
        Copy table
      </span>
    </button>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div>
      <div
        class="relative w-full overflow-auto"
      >
        <table
          class="w-full caption-bottom text-sm table-fixed"
        >
          <thead
            class="[&_tr]:border-b"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Total Requests
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Transfer Size
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Resource Size
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                10
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  1024 bytes
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  2.00 KB
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`NetworkRequestsSummaryCard > shows Report column when multiple valid stats 1`] = `
<div
  class="rounded-xl border bg-card text-card-foreground shadow"
>
  <div
    class="p-6 flex flex-row items-center justify-between space-y-0"
  >
    <div
      class="font-semibold leading-none tracking-tight"
    >
      Network Requests Summary
    </div>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
      data-state="closed"
      id="radix-_r_4_"
      title="Copy table"
      type="button"
    >
      <svg
        class="lucide lucide-copy h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          ry="2"
          width="14"
          x="8"
          y="8"
        />
        <path
          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
        />
      </svg>
      <span
        class="sr-only"
      >
        Copy table
      </span>
    </button>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div>
      <div
        class="relative w-full overflow-auto"
      >
        <table
          class="w-full caption-bottom text-sm table-fixed"
        >
          <thead
            class="[&_tr]:border-b"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Report
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Total Requests
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Transfer Size
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Resource Size
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 font-medium"
              >
                Desktop
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                1
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  0 bytes
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  0 bytes
                </span>
              </td>
            </tr>
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 font-medium"
              >
                Mobile
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                1
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  0 bytes
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  0 bytes
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`NetworkRequestsSummaryCard > shows Unknown for empty label when report column shown 1`] = `
<div
  class="rounded-xl border bg-card text-card-foreground shadow"
>
  <div
    class="p-6 flex flex-row items-center justify-between space-y-0"
  >
    <div
      class="font-semibold leading-none tracking-tight"
    >
      Network Requests Summary
    </div>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
      data-state="closed"
      id="radix-_r_8_"
      title="Copy table"
      type="button"
    >
      <svg
        class="lucide lucide-copy h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          ry="2"
          width="14"
          x="8"
          y="8"
        />
        <path
          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
        />
      </svg>
      <span
        class="sr-only"
      >
        Copy table
      </span>
    </button>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div>
      <div
        class="relative w-full overflow-auto"
      >
        <table
          class="w-full caption-bottom text-sm table-fixed"
        >
          <thead
            class="[&_tr]:border-b"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Report
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Total Requests
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Transfer Size
              </th>
              <th
                class="h-10 px-2 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border"
              >
                Resource Size
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 font-medium"
              >
                Unknown
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                1
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  0 bytes
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  0 bytes
                </span>
              </td>
            </tr>
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 font-medium"
              >
                B
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                1
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  0 bytes
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5"
              >
                <span
                  class=""
                  title="bytes"
                >
                  0 bytes
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
